# manager-book-redirect

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  README.md  ads-class.puml  ads-seq.puml  host.json  justfile  keepwarm.sh  local-server.sh  modal_redirect.py  preview-demo.html  pyproject.toml  requirements-dev.txt  requirements.txt  run-tests.sh  system-design.puml  test_e2e_modal_redirect.py  test_link_spacing.py  test_modal_redirect.py
.github/workflows/: deploy-prod_idvorkin.yml  master_manager-book(dev).yml
HttpTrigger1/: __init__.py  function.json
Redirect/: __init__.py  function.json  redirect.py  shared.py  test_urls.py
